--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ceylin Çaltepe</title>
+    <link rel="stylesheet" href="assets/css/component/hero-image.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="https://kit.fontawesome.com/70d415455e.js" crossorigin="anonymous"></script>
 </head>
@@ -35,26 +36,45 @@
         <div id="prev-slider-button" class="slider-button"><i class="fa-solid fa-paintbrush"></i></div>
         <div id="next-slider-button" class="slider-button"><i class="fa-solid fa-code"></i></div>
     </div>
-    <nav>
+    <nav class="top">
+        <div class="nav-logo">
+            <img src="assets/img/logo.png" alt="logo">
+        </div>
+        <ul>
+            <li><a href="#hero">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#experience-education">Experience</a></li>
+            <li><a href="#experience-education">Education</a></li>
+            <li><a href="#what-i-do">Service</a></li>
+            <li><a href="#works">Work</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
     </nav>
     <div id="detail">
         <div id="about">
         </div>
         <div id="experience-education">
+            <h1>Experience</h1>
+            <h1>Education</h1>
         </div>
         <div id="skills">
+            <h1>My Skills</h1>
         </div>
         <div id="what-i-do">
+            <h1>What I Do</h1>
         </div>
         <div id="works">
+            <h1>My Works</h1>
         </div>
         <div id="contact">
         </div>
         <footer>
+            © 2023 CeylinC. All rights reserved.
         </footer>
     </div>
 
     <script src="assets/js/components/hero-image.js"></script>
+    <script src="assets/js/components/navbar.js"></script>
 </body>
 
 </html>
