feat: create about

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                 I'm a Designer.
             </div>
             <div class="text">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste commodi atque asperiores mollitia quae blanditiis possimus ab et ducimus, illo quod, nam tempore velit assumenda, minus deleniti laboriosam ea at.
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste commodi atque asperiores mollitia quae
+                blanditiis possimus ab et ducimus, illo quod, nam tempore velit assumenda, minus deleniti laboriosam ea
+                at.
             </div>
         </div>
         <div id="coder">
@@ -30,7 +32,9 @@
                 I'm a Coder.
             </div>
             <div class="text">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste commodi atque asperiores mollitia quae blanditiis possimus ab et ducimus, illo quod, nam tempore velit assumenda, minus deleniti laboriosam ea at.
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste commodi atque asperiores mollitia quae
+                blanditiis possimus ab et ducimus, illo quod, nam tempore velit assumenda, minus deleniti laboriosam ea
+                at.
             </div>
         </div>
         <div id="prev-slider-button" class="slider-button"><i class="fa-solid fa-paintbrush"></i></div>
@@ -52,6 +56,32 @@
     </nav>
     <div id="detail">
         <div id="about">
+            <div class="photo">
+                <img src="assets/img/photo.jpg" alt="photo">
+            </div>
+            <div class="content">
+                <h1>About Me</h1>
+                <p>
+                    Hello, I'm Ceylin. I have been dealing with design for 6 years. I have been involved in activities
+                    such as 3D modeling, photoshop, post preparation.
+                </p>
+                <div class="information">
+                    <div class="name"><span>Name : </span>Ceylin Çaltepe</div>
+                    <div class="birth"><span>Day of Birth : </span>27 October 2002</div>
+                    <div class="address"><span>Address : </span>Yarhasanlar Neighborhood, Şehzadeler, Manisa, Turkey
+                    </div>
+                    <div class="language"><span>Language : </span>Turkish, English</div>
+                    <div class="social-media"><span>Socail Media : </span>
+                        <ul>
+                            <li><a href="https://www.linkedin.com/in/ceylin-caltepe/" target="_blank"><i
+                                        class="fa-brands fa-linkedin"></i></a></li>
+                            <li><a href="https://github.com/CeylinC" target="_blank"><i
+                                        class="fa-brands fa-square-github"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="download-cv">Download CV</div>
+            </div>
         </div>
         <div id="experience-education">
             <h1>Experience</h1>
@@ -75,6 +105,7 @@
 
     <script src="assets/js/components/hero-image.js"></script>
     <script src="assets/js/components/navbar.js"></script>
+    <script src="assets/js/components/detail.js"></script>
 </body>
 
 </html>
