--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <ul>
             <li><a href="#hero">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#experience-education">Experience</a></li>
             <li><a href="#experience-education">Education</a></li>
+            <li><a href="#experience-education">Experience</a></li>
             <li><a href="#what-i-do">Service</a></li>
             <li><a href="#works">Work</a></li>
             <li><a href="#contact">Contact</a></li>
@@ -84,8 +84,38 @@
             </div>
         </div>
         <div id="experience-education">
-            <h1>Experience</h1>
-            <h1>Education</h1>
+            <div id="education">
+                <h1>Education</h1>
+                <div class="educations">
+                    <div class="education-card">
+                        <h3 class="title">
+                            Software Engineer
+                        </h3>
+                        <div class="school">
+                            Manisa Celal Bayar University
+                        </div>
+                        <div class="time">
+                            2021 - Now
+                        </div>
+                    </div>
+                    <div class="education-card">
+                        <h3 class="title">
+                            Unity, Flutter & Game Design
+                        </h3>
+                        <div class="school">
+                            Oyun ve Uygulama Akademisi
+                        </div>
+                        <div class="time">
+                            2022 - 2023
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="experience">
+                <h1>Experience</h1>
+                <div class="experiences">
+                </div>
+            </div>
         </div>
         <div id="skills">
             <h1>My Skills</h1>
