--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="#experience-education">Education</a></li>
             <li><a href="#experience-education">Experience</a></li>
+            <li><a href="#skill">Skill</a></li>
             <li><a href="#what-i-do">Service</a></li>
             <li><a href="#works">Work</a></li>
             <li><a href="#contact">Contact</a></li>
@@ -117,8 +118,11 @@
                 </div>
             </div>
         </div>
-        <div id="skills">
+        <div id="skill">
             <h1>My Skills</h1>
+            <div class="skills">
+                
+            </div>
         </div>
         <div id="what-i-do">
             <h1>What I Do</h1>
