--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
             <li><a href="#experience-education">Education</a></li>
             <li><a href="#experience-education">Experience</a></li>
             <li><a href="#skill">Skill</a></li>
-            <li><a href="#what-i-do">Service</a></li>
             <li><a href="#works">Work</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
@@ -121,14 +120,16 @@
         <div id="skill">
             <h1>My Skills</h1>
             <div class="skills">
-                
             </div>
-        </div>
-        <div id="what-i-do">
-            <h1>What I Do</h1>
         </div>
         <div id="works">
             <h1>My Works</h1>
+            <div class="work-list">
+                <div class="work">
+                    <img src="https://drive.google.com/uc?export=view&id=1nKj6ClsYUQ33SchTvwXdzISP_4KK7XEf">
+                    <div class="title">asd</div>
+                </div>
+            </div>
         </div>
         <div id="contact">
         </div>
