feat: add responsive feature

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         <div class="nav-logo">
             <img src="assets/img/logo.png" alt="logo">
         </div>
+        <span class="hamburger"><i class="fa-solid fa-bars"></i></span>
         <ul>
             <li><a href="#hero">Home</a></li>
             <li><a href="#about">About</a></li>
@@ -66,14 +67,14 @@
                     such as 3D modeling, photoshop, post preparation.
                 </p>
                 <div class="information">
-                    <div class="name"><span>Name : </span>Ceylin Çaltepe</div>
-                    <div class="birth"><span>Day of Birth : </span>27 October 2002</div>
-                    <div class="address"><span>Address : </span>Yarhasanlar Neighborhood, Şehzadeler, Manisa, Turkey
+                    <div class="name"><span>Name : </span> Ceylin Çaltepe</div>
+                    <div class="birth"><span>Day of Birth : </span> 27 October 2002</div>
+                    <div class="address"><span>Address : </span> Yarhasanlar Neighborhood, Şehzadeler, Manisa, Turkey
                     </div>
-                    <div class="language"><span>Language : </span>Turkish, English</div>
+                    <div class="language"><span>Language : </span> Turkish, English</div>
                     <div class="social-media"><span>Socail Media : </span>
                         <ul>
-                            <li><a href="https://www.linkedin.com/in/ceylin-caltepe/" target="_blank"><i
+                            <li><a href="https://www.linkedin.com/in/ceylin-caltepe/" target="_blank"> <i
                                         class="fa-brands fa-linkedin"></i></a></li>
                             <li><a href="https://github.com/CeylinC" target="_blank"><i
                                         class="fa-brands fa-square-github"></i></a></li>
@@ -132,6 +133,7 @@
             </div>
         </div>
         <div id="contact">
+            <h1>Contact Me</h1>
         </div>
         <footer>
             © 2023 CeylinC. All rights reserved.
