feat: add email at about and download cv

--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
             <li><a href="#experience-education">Experience</a></li>
             <li><a href="#skill">Skill</a></li>
             <li><a href="#works">Work</a></li>
-            <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
     <div id="detail">
@@ -72,6 +71,7 @@
                     <div class="address"><span>Address : </span> Yarhasanlar Neighborhood, Şehzadeler, Manisa, Turkey
                     </div>
                     <div class="language"><span>Language : </span> Turkish, English</div>
+                    <div class="mail"><span>Email : </span>caltepeceylin@gmail.com</div>
                     <div class="social-media"><span>Socail Media : </span>
                         <ul>
                             <li><a href="https://www.linkedin.com/in/ceylin-caltepe/" target="_blank"> <i
@@ -81,7 +81,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="download-cv">Download CV</div>
+                <a href="assets/download-item/Ceylin-Caltepe.pdf" class="download-cv" download="Ceylin Caltepe CV">Download CV</a>
             </div>
         </div>
         <div id="experience-education">
@@ -131,9 +131,6 @@
                     <div class="title">asd</div>
                 </div>
             </div>
-        </div>
-        <div id="contact">
-            <h1>Contact Me</h1>
         </div>
         <footer>
             © 2023 CeylinC. All rights reserved.
