--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
                 I'm a Designer.
             </div>
             <div class="text">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste commodi atque asperiores mollitia quae
-                blanditiis possimus ab et ducimus, illo quod, nam tempore velit assumenda, minus deleniti laboriosam ea
-                at.
+                Welcome to my realm of boundless imagination and creativity. Embracing the dance of art and technology,
+                I open the door to designs that leave an indelible mark in the digital world. Here, I embark on an
+                inspiring journey, pushing the boundaries of vision and bringing forth designs that captivate the
+                senses. Are you ready to walk hand in hand through the enchanting world of design?
             </div>
         </div>
         <div id="coder">
@@ -32,9 +33,10 @@
                 I'm a Coder.
             </div>
             <div class="text">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Iste commodi atque asperiores mollitia quae
-                blanditiis possimus ab et ducimus, illo quod, nam tempore velit assumenda, minus deleniti laboriosam ea
-                at.
+                Step into the meeting point of minds devoted to coding and problem-solving! I extend a warm welcome to
+                the magical world of software engineering, where we immerse ourselves in knowledge and technology that
+                underpins the digital age. This is the birthplace of solutions that simplify life and transform the
+                world, powered by the magic of code. Are you prepared to code and script the future together?
             </div>
         </div>
         <div id="prev-slider-button" class="slider-button"><i class="fa-solid fa-paintbrush"></i></div>
@@ -81,7 +83,8 @@
                         </ul>
                     </div>
                 </div>
-                <a href="assets/download-item/Ceylin-Caltepe.pdf" class="download-cv" download="Ceylin Caltepe CV">Download CV</a>
+                <a href="assets/download-item/Ceylin-Caltepe.pdf" class="download-cv"
+                    download="Ceylin Caltepe CV">Download CV</a>
             </div>
         </div>
         <div id="experience-education">
